--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,19 @@
-.App {
-  text-align: center;
+* {
+	box-sizing: border-box;
 }
+
+.App {
+	text-align: center;
+}
+
+/* @import url('https://fonts.googleapis.com/css2?family=Fontdiner+Swanky&family=Galada&family=Leckerli+One&family=Modak&family=Oleo+Script:wght@400;700&family=Princess+Sofia&family=Sail&family=Shrikhand&family=Sonsie+One&display=swap'); */
+
+/* font-family: 'Fontdiner Swanky', cursive;
+font-family: 'Galada', cursive;
+font-family: 'Leckerli One', cursive;
+font-family: 'Modak', cursive;
+font-family: 'Oleo Script', cursive;
+font-family: 'Princess Sofia', cursive;
+font-family: 'Sail', cursive;
+font-family: 'Shrikhand', cursive;
+font-family: 'Sonsie One', cursive; */
