--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -19,14 +19,14 @@
 	align-items: center;
 	justify-content: center;
 }
-.overlay {
+/* .overlay {
 	display: relative;
 	height: 100vh;
 	/* size: cover; */
-	/* width: 100px; */
-	background: rgba(0, 0, 0, .2);
+/* width: 100px; */
+/* background: rgba(0, 0, 0, .2);
 	z-index: 1;
-}
+} */
 
 /* font-family: 'Fontdiner Swanky', cursive; */
 /* font-family: 'Leckerli One', cursive; */
