--- a/src/components/overlay/Overlay.css
+++ b/src/components/overlay/Overlay.css
@@ -1,39 +1,30 @@
 .circle,
 .content {
-	-webkit-transition: all 0.5s ease-in-out;
+	/* -webkit-transition: all 0.5s ease-in-out;
 	-moz-transition: all 0.5s ease-in-out;
 	-o-transition: all 2s ease-in-out;
-	-ms-transition: all 2s ease-in-out;
+	-ms-transition: all 2s ease-in-out; */
 	transition: all 2s ease-in-out;
 }
 
 .circle {
-	background: rgba(99, 99, 99, 0.8);
-	box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.8);
+	position: absolute;
+
+	background-color: rgb(241, 196, 15);
+
 	border-radius: 100%;
-	color: white;
+	color: none;
 	text-align: center;
-	font-family: sans-serif;
-	padding: 20px;
-	overflow: hidden;
+	transform: scale(0.01);
 
-	-webkit-transform: scale(0.1);
-	-moz-transform: scale(0.1);
-	-o-transform: scale(0.1);
-	-ms-transform: scale(0.1);
-	transform: scale(0.1);
-
-	width: 400px;
-	height: 400px;
-	line-height: 400px;
+	width: 100vw;
+	height: 100vh;
+	z-index: 10;
+	/* line-height: 400px; */
 }
 
-.circle:hover {
-	-webkit-transform: scale(1);
-	-moz-transform: scale(1);
-	-o-transform: scale(1);
-	-ms-transform: scale(1);
-	transform: scale(1);
+.circle.activate {
+	transform: scale(1.5);
 
 	vertical-align: middle;
 }
@@ -42,5 +33,5 @@
 	opacity: .1;
 }
 .circle:hover .content {
-	opacity: 1;
+	opacity: .02;
 }
