--- a/src/components/animals/Animal.css
+++ b/src/components/animals/Animal.css
@@ -1,7 +1,12 @@
 .animal-container {
-	width: 90vw;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: 0 5vw 0 5vw;
 }
-
+/* ont-family: 'Cabin', sans-serif;
+font-family: 'Lato', sans-serif; */
+/* font-family: 'Quicksand', sans-serif; */
 .animal-child {
 	font-size: 80px;
 	text-align: center;
@@ -11,7 +16,13 @@
 	font-weight: 100;
 	height: 70vh;
 	margin-top: 5vh;
-	padding-top: 30vh;
+	padding: 30px 10px;
+}
+.breadbox-question {
+	color: #000;
+	font-weight: bolder;
+	border-bottom: 1px solid #000;
+	padding-bottom: 10px;
 }
 
 .yes {
@@ -31,4 +42,27 @@
 .no {
 	border: 10px rgb(241, 196, 15) solid;
 	z-index: -1;
+}
+.animal-true,
+.animal-false {
+	display: none;
+}
+
+h1 {
+	font-family: 'Quicksand', sans-serif;
+	color: white;
+	font-weight: 400;
+}
+.questions {
+	display: flex;
+}
+.inside-container {
+	height: 90%;
+	overflow-x: hidden;
+	overflow-y: hidden;
+	text-align: center;
+}
+li {
+	list-style-type: none;
+	font-size: 24px;
 }
