--- a/src/components/animals/Animal.css
+++ b/src/components/animals/Animal.css
@@ -2,22 +2,13 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	margin: 0 5vw 0 5vw;
+	padding: 1vh;
+	width: 90vw;
+	margin: auto;
 }
 /* ont-family: 'Cabin', sans-serif;
 font-family: 'Lato', sans-serif; */
 /* font-family: 'Quicksand', sans-serif; */
-.animal-child {
-	font-size: 80px;
-	text-align: center;
-	width: 33.33%;
-	display: inline-block;
-	font-family: 'Modak', cursive;
-	font-weight: 100;
-	height: 70vh;
-	margin-top: 5vh;
-	padding: 30px 10px;
-}
 .animal-header {
 	width: 100%;
 	font-size: 80px;
@@ -27,51 +18,36 @@ font-family: 'Lato', sans-serif; */
 	padding-top: 10px;
 	color: rgb(241, 196, 15);
 }
-.breadbox-question {
-	color: #000;
-	font-weight: bolder;
-	border-bottom: 1px solid #000;
-	padding-bottom: 10px;
+.flex-animal {
+	margin-top: 5vh;
+	display: flex;
+	flex: 1;
+	height: 70vh;
 }
 
+li {
+	list-style-type: none;
+	font-size: 24px;
+}
+ul {
+	margin: 0;
+	padding: 0;
+}
 .yes {
-	border: 10px #3498db solid;
-
+	background-color: #2ee671;
 	color: rgba(52, 152, 219, .8);
 	z-index: -1;
 }
-.questions {
-	background-color: #2ee671;
-	color: rgba(52, 152, 219, .8);
+.question {
+	background-color: rgb(241, 196, 15);
+	color: white;
 	z-index: -1;
 	/* justify-content: center; */
 
 	/* text-shadow: grey 2px 2px 2px; */
 }
 .no {
-	border: 10px rgb(241, 196, 15) solid;
+	background-color: #3498db;
+	color: yellowgreen;
 	z-index: -1;
-}
-.animal-true,
-.animal-false {
-	display: none;
-}
-
-h1 {
-	font-family: 'Quicksand', sans-serif;
-	color: white;
-	font-weight: 400;
-}
-.questions {
-	display: flex;
-}
-.inside-container {
-	height: 90%;
-	overflow-x: hidden;
-	overflow-y: hidden;
-	text-align: center;
-}
-li {
-	list-style-type: none;
-	font-size: 24px;
 }
