--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,9 @@
 }
 body {
 	height: 100vh;
+	font-family: 'Poppins', sans-serif;
+	font-weight: 300;
+
 }
 
 /* @import url('https://fonts.googleapis.com/css2?family=Fontdiner+Swanky&family=Galada&family=Leckerli+One&family=Modak&family=Oleo+Script:wght@400;700&family=Princess+Sofia&family=Sail&family=Shrikhand&family=Sonsie+One&display=swap'); */
