--- a/src/components/animals/Animal.css
+++ b/src/components/animals/Animal.css
@@ -5,10 +5,12 @@
 	padding: 1vh;
 	width: 90vw;
 	margin: auto;
+
 }
 /* ont-family: 'Cabin', sans-serif;
 font-family: 'Lato', sans-serif; */
 /* font-family: 'Quicksand', sans-serif; */
+/* font-family: 'Poppins', sans-serif; */
 .animal-header {
 	width: 100%;
 	font-size: 80px;
@@ -19,20 +21,41 @@ font-family: 'Lato', sans-serif; */
 	color: rgb(241, 196, 15);
 }
 .flex-animal {
+	padding-top: 2vh;
 	margin-top: 5vh;
 	display: flex;
 	flex: 1;
 	height: 70vh;
+	text-align: center;
+	/* justify-content: center; */
+}
+
+
+.yes,
+.question,
+.no {
+	justify-content: center;
+}
+h1 {
+	font-family: 'Poppins', sans-serif;
+	font-weight: 300;
+	line-height: 1.45;
+
+
 }
 
 li {
 	list-style-type: none;
 	font-size: 24px;
+	padding: 0em .5em ;
 }
+.flex-animal.question li:nth-child(even) { background: rgb(240, 215, 114); }
 ul {
 	margin: 0;
-	padding: 0;
+	padding: 0 5px;
+	list-style-position: inside;
 }
+
 .yes {
 	background-color: #2ee671;
 	color: rgba(52, 152, 219, .8);
@@ -42,12 +65,37 @@ ul {
 	background-color: rgb(241, 196, 15);
 	color: white;
 	z-index: -1;
-	/* justify-content: center; */
-
-	/* text-shadow: grey 2px 2px 2px; */
 }
 .no {
 	background-color: #3498db;
 	color: yellowgreen;
 	z-index: -1;
+}
+
+.flex-animal.yes span, .flex-animal.no span, h3{
+	color: white;
+	font-size: 40px;
+	/* line-height: 1.2; */
+	font-family: 'Poppins', sans-serif;
+}
+
+h3 {
+	color: black;
+	font-weight: 300;
+	line-height: .9;
+	margin-bottom: 0;
+}
+
+.flex-animal.question {
+	padding-top: 0
+}
+.flex-instructions.animal-hed span {
+	padding-top: 50px;
+	font-size: 80px;
+}
+.flex-instructions.animal-hed   p {
+	font-size: 24px;
+	text-align: center;
+	padding-top: 30px;
+
 }
