--- a/src/components/animals/Animal.css
+++ b/src/components/animals/Animal.css
@@ -7,7 +7,7 @@
 	margin: auto;
 
 }
-/* ont-family: 'Cabin', sans-serif;
+/* font-family: 'Cabin', sans-serif;
 font-family: 'Lato', sans-serif; */
 /* font-family: 'Quicksand', sans-serif; */
 /* font-family: 'Poppins', sans-serif; */
@@ -27,9 +27,7 @@ font-family: 'Lato', sans-serif; */
 	flex: 1;
 	height: 70vh;
 	text-align: center;
-	/* justify-content: center; */
 }
-
 
 .yes,
 .question,
@@ -41,15 +39,49 @@ h1 {
 	font-weight: 300;
 	line-height: 1.45;
 
+}
+strong {
+	font-family: 'Poppins', sans-serif;
+	color: black;
+	font-size: 30px;
+	font-weight: 300;
+	line-height: 5;
+	text-align: center;
+	justify-content: center;
+}
 
+.show-yes {
+	visibility: visible;
 }
 
 li {
 	list-style-type: none;
 	font-size: 24px;
-	padding: 0em .5em ;
+	padding: 0em 2.5em ;
 }
 .flex-animal.question li:nth-child(even) { background: rgb(240, 215, 114); }
+ul {
+	margin: 0;
+	padding: 0 5px;
+	list-style-position: inside;
+}
+.flex-animal.question li {
+	color: black;
+	font-size: 20px;
+	line-height: 1.75;
+}
+.flex-animal.yes li:nth-child(even) { background:  #60ee94; }
+ul {
+	margin: 0;
+	padding: 0 5px;
+	list-style-position: inside;
+}
+.flex-animal.yes li, .flex-animal.no li{
+	color: black;
+	font-size: 20px;
+	line-height: 1.75;
+}
+.flex-animal.no li:nth-child(even) { background:  #5ba9dd; }
 ul {
 	margin: 0;
 	padding: 0 5px;
@@ -58,24 +90,23 @@ ul {
 
 .yes {
 	background-color: #2ee671;
-	color: rgba(52, 152, 219, .8);
 	z-index: -1;
 }
 .question {
 	background-color: rgb(241, 196, 15);
 	color: white;
-	z-index: -1;
+	cursor: pointer;
+	/* z-index: -1; */
 }
 .no {
 	background-color: #3498db;
-	color: yellowgreen;
 	z-index: -1;
 }
 
 .flex-animal.yes span, .flex-animal.no span, h3{
-	color: white;
+	color: #000;
 	font-size: 40px;
-	/* line-height: 1.2; */
+	line-height: .9;
 	font-family: 'Poppins', sans-serif;
 }
 
@@ -97,5 +128,7 @@ h3 {
 	font-size: 24px;
 	text-align: center;
 	padding-top: 30px;
-
+}
+.flex-animal.no li, .flex-animal.yes li {
+	visibility: hidden;
 }
